--- a/admin/package.json
+++ b/admin/package.json
@@ -34,10 +34,12 @@
     "chart.js": "^3.8.0",
     "classnames": "^2.3.1",
     "core-js": "^3.23.4",
+    "faker": "^6.6.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "redux": "4.2.0",
