--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
+  "version": "3.2.1",
   "private": true,
   "dependencies": {
     "@coreui/icons": "^2.1.0",
@@ -8,7 +8,6 @@
     "@coreui/react": "^4.3.0",
     "@emotion/react": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.8.7",
     "@mui/styled-engine": "^5.8.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -21,7 +20,7 @@
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
-    "react-modal-hover": "^1.1.13",
+    "react-paginate": "^8.1.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
