--- a/admin/package.json
+++ b/admin/package.json
@@ -1,17 +1,8 @@
 {
-  "name": "@coreui/coreui-free-react-admin-template",
+  "name": "@avp/10g",
   "version": "4.4.0",
-  "description": "CoreUI Free React Admin Template",
+  "description": "name cutie",
   "homepage": ".",
-  "bugs": {
-    "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:coreui/coreui-free-react-admin-template.git"
-  },
-  "license": "MIT",
-  "author": "The CoreUI Team (https://github.com/orgs/coreui/people)",
   "scripts": {
     "build": "react-scripts build",
     "changelog": "auto-changelog --starting-version 4.4.0 --commit-limit false --hide-credit",
@@ -39,6 +30,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
+    "react-cookie": "^4.1.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
