--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-cookie": "^4.1.1",
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hover": "^3.0.1",
     "react-multi-select-component": "^4.3.3",
     "react-paginate": "^8.1.3",
